--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="Background Changing using HTML input Range">
+    <meta name="keywords" content="Change your background by input range values. A tutorial with html, css and javascript">
     <title>Background Color Selection with Range Input</title>
     <link rel="stylesheet" href="Background Color Selection with Range Input.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
